--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
             <section>
                 <!--Cloudstack-->
                 <h2>Cloudstack</h2>
-                <a target="_bLank" href="https://lelitta.github.io/Topnatch-Freight-Inc.-5/">GitHub</a><br>
-                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Topnatch+Freight+Int/Topnatch+Freight+Int.-5/index.html">BackBlaze</a><br>
-                <a target="_bLank" href="https://topnatch-freight-inc-5-git-main-lettitas-projects.vercel.app/">Vercel</a><br>
-                <a target="_bLank" href="https://warm-treacle-c2ec6e.netlify.app/">Netlify</a><br>
+                <a target="_bLank" href="https://lelitta.github.io/Topnatch-Freight-Inc.-5/">https://lelitta.github.io/Topnatch-Freight-Inc.-5/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Topnatch+Freight+Int/Topnatch+Freight+Int.-5/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Topnatch+Freight+Int/Topnatch+Freight+Int.-5/index.html</a><br>
+                <a target="_bLank" href="https://topnatch-freight-inc-5-5at4-git-main-lettitas-projects.vercel.app/">https://topnatch-freight-inc-5-5at4-git-main-lettitas-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://rococo-nougat-e37714.netlify.app/">https://rococo-nougat-e37714.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
